[gd_scene load_steps=2 format=3 uid="uid://cnb8xh4y5qw7m"]

[ext_resource type="Script" uid="uid://h5mdwo6mlbe" path="res://features/world_map/logic/world_map.gd" id="1_world_map"]

[node name="WorldMap" type="Node2D"]
script = ExtResource("1_world_map")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0.15, 0.2, 0.15, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
zoom = Vector2(0.8, 0.8)

[node name="ConnectionsContainer" type="Node2D" parent="."]

[node name="LocationsContainer" type="Node2D" parent="."]

[node name="PlayerContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="PanelContainer" parent="UI"]
offset_right = 1920.0
offset_bottom = 80.0

[node name="TopBarBg" type="ColorRect" parent="UI/TopBar"]
layout_mode = 2
color = Color(0.1, 0.1, 0.12, 0.9)

[node name="MarginContainer" type="MarginContainer" parent="UI/TopBar"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 32
text = "CARTE DU MONDE"

[node name="DivinityPanel" type="HBoxContainer" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="AstraeonLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer/DivinityPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "âš– Astraeon: 0"

[node name="KharvulLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer/DivinityPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "âš¡ KharvÃ»l: 0"

[node name="BottomBar" type="PanelContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_right = 1920.0
grow_vertical = 0

[node name="BottomBarBg" type="ColorRect" parent="UI/BottomBar"]
layout_mode = 2
color = Color(0.1, 0.1, 0.12, 0.9)

[node name="MarginContainer" type="MarginContainer" parent="UI/BottomBar"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="UI/BottomBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="InfoLabel" type="Label" parent="UI/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "SÃ©lectionnez une destination pour voyager"
vertical_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="UI/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PartyButton" type="Button" parent="UI/BottomBar/MarginContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ðŸ‘¥ Ã‰quipe"

[node name="InventoryButton" type="Button" parent="UI/BottomBar/MarginContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ðŸŽ’ Inventaire"

[node name="MenuButton" type="Button" parent="UI/BottomBar/MarginContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ðŸ“‹ Menu"

[node name="NotificationPanel" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 180.0
grow_horizontal = 2

[node name="NotificationBg" type="ColorRect" parent="UI/NotificationPanel"]
layout_mode = 2
color = Color(0.15, 0.15, 0.2, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="UI/NotificationPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="NotificationLabel" type="Label" parent="UI/NotificationPanel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "Notification"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DebugInfo" type="Label" parent="UI"]
visible = false
offset_left = 10.0
offset_top = 90.0
offset_right = 300.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 16
text = "[DEBUG]
Camera Pos: (0, 0)
Zoom: 1.0"
